Update build to use unpacked feeds